@@ -62,9 +62,9 @@ int main(int argc, char *argv[])
 
   // 2) Definition of exponential model
   NumericalPoint scale(2);
-  scale[0] = 1.98824;
-  scale[1] = 0.924731;
-  NumericalPoint amplitude(1, 3.15352);
+  scale[0] = 1.988;
+  scale[1] = 0.924;
+  NumericalPoint amplitude(1, 3.153);
   SquaredExponential covarianceModel(scale, amplitude);
 
   // 3) Basis definition
