@@ -49,7 +49,7 @@ Examples
 >>> outputSample = model(inputSample)
 >>> # Definition of exponential model
 >>> spatialDimension = 2
->>> covarianceModel = ot.SquaredExponential([1.98824,0.924731], [3.15352])
+>>> covarianceModel = ot.SquaredExponential([1.988, 0.924], [3.153])
 >>> # Basis definition
 >>> basis = ot.ConstantBasisFactory(spatialDimension).build()
 >>> # Kriring algorithm
